# django-security-headers-example

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
config/: urls.py  wsgi.py
config/settings/: base.py  prod.py
django_security_headers_example/core/: apps.py  middleware.py  views.py
django_security_headers_example/templates/core/: landing_page.html
